<resources>
    <string name="app_name">inventario</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="mail">correo</string>
    <string name="password">contraseña</string>
    <string name="user">Usuario</string>
    <string name="Return">volver</string>
    <string name="info">Informacion del producto</string>
    <string name="productName">nombre de producto</string>
    <string name="create">crear</string>
    <string name="time">Hora</string>
    <string name="Hour">Hora</string>
</resources>