<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/productName" />

    <Spinner
        android:id="@+id/dates"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="10dp"
        android:layout_toLeftOf="@+id/times"
        android:contentDescription="@string/Hour"
        android:minHeight="48dp" />

    <Spinner
        android:id="@id/times"
        android:layout_width="129dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-2dp"
        android:layout_marginRight="0dp"
        android:contentDescription="@string/time"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/crear"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/brand"
        android:layout_alignParentRight="true"
        android:layout_marginTop="24dp"
        android:layout_marginRight="44dp"
        android:text="@string/create" />

    <EditText
        android:id="@+id/brand"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dates"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="0dp"
        android:hint="marca"
        android:minHeight="48dp" />
</RelativeLayout>